OS_X/MAC_STATIC/OSX_STATIC_LIBRARY/nbproject/private/Default-build.log
g++ -c "TM.cpp" -o TM.o
In file included from TM.cpp:8:
In file included from ./TM.h:54:
In file included from ./TX.h:20:
./OSTM.h:116:20: warning: in-class initialization of non-static data member is a C++11 extension [-Wc++11-extensions]
    const int ZERO = 0;
                   ^
./OSTM.h:38:77: warning: control reaches end of non-void function [-Wreturn-type]
    virtual std::shared_ptr<OSTM> getBaseCopy(std::shared_ptr<OSTM> object){};//std::cout << "[OSTM GETBASECOPY]" << std::endl;};
                                                                            ^
In file included from TM.cpp:8:
In file included from ./TM.h:54:
./TX.h:111:47: error: a space is required between consecutive right angle brackets (use '> >')
    static std::map<pid_t, std::map< int, int >> process_map_collection;
                                              ^~
                                              > >
In file included from TM.cpp:8:
./TM.h:61:12: warning: defaulted function definitions are a C++11 extension [-Wc++11-extensions]
    TM() = default; 
           ^
./TM.h:65:13: warning: defaulted function definitions are a C++11 extension [-Wc++11-extensions]
    ~TM() = default;
            ^
./TM.h:69:21: warning: deleted function definitions are a C++11 extension [-Wc++11-extensions]
    TM(const TM&) = delete; 
                    ^
./TM.h:73:32: warning: deleted function definitions are a C++11 extension [-Wc++11-extensions]
    TM& operator=(const TM&) = delete; 
                               ^
./TM.h:77:49: error: a space is required between consecutive right angle brackets (use '> >')
    std::map<std::thread::id, std::shared_ptr<TX>>txMap;
                                                ^~
                                                > >
./TM.h:82:59: error: a space is required between consecutive right angle brackets (use '> >')
    static std::map<pid_t, std::map< std::thread::id, int >> process_map_collection;
                                                          ^~
                                                          > >
TM.cpp:21:48: error: a space is required between consecutive right angle brackets (use '> >')
std::map<pid_t, std::map< std::thread::id, int >> TM::process_map_collection;
                                               ^~
                                               > >
TM.cpp:46:52: error: a space is required between consecutive right angle brackets (use '> >')
    std::map<pid_t, std::map< std::thread::id, int >>::iterator process_map_collection_Iterator = TM::process_map_collection.find(ppid);
                                                   ^~
                                                   > >
TM.cpp:52:43: error: expected expression
        TM::process_map_collection.insert({ppid, map});
                                          ^
TM.cpp:55:51: error: a space is required between consecutive right angle brackets (use '> >')
    std::map<std::thread::id, std::shared_ptr < TX>>::iterator it = txMap.find(std::this_thread::get_id());
                                                  ^~
                                                  > >
TM.cpp:58:22: error: expected expression
        txMap.insert({std::this_thread::get_id(), _transaction_object});
                     ^
TM.cpp:66:56: error: expected expression
        process_map_collection_Iterator->second.insert({std::this_thread::get_id(), 1});
                                                       ^
TM.cpp:81:49: error: a space is required between consecutive right angle brackets (use '> >')
    std::map<std::thread::id, std::shared_ptr<TX>>::iterator it = txMap.find(std::this_thread::get_id());
                                                ^~
                                                > >
TM.cpp:103:52: error: a space is required between consecutive right angle brackets (use '> >')
    std::map<pid_t, std::map< std::thread::id, int >>::iterator process_map_collection_Iterator = TM::process_map_collection.find(ppid);
                                                   ^~
                                                   > >
TM.cpp:106:14: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for (auto current = process_map_collection_Iterator->second.begin(); current != process_map_collection_Iterator->second.end(); ++current) {
             ^
TM.cpp:122:10: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    for (auto current = txMap.begin(); current != txMap.end(); ++current) {
         ^
8 warnings and 11 errors generated.
make: *** [TM.o] Error 1
